<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/purple_500">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/question_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/border_answer">
                <TextView
                    android:textColor="#000000"
                    android:textSize="29sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1/25"/>

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20:00"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_margin="11dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/testT"
            android:textColor="#000000"
            android:textSize="18dp" android:textStyle="bold" />
        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_true" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/group_answer"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <RadioButton
                    android:id="@+id/answer_1"
                    style="@style/answer_content"
                    android:text="@string/b"
                    android:elevation="2dp">
                </RadioButton>
                <RadioButton
                    android:id="@+id/answer_2"
                    style="@style/answer_content"
                    android:text="@string/b"
                    android:elevation="2dp">
                </RadioButton>
                <RadioButton
                    android:id="@+id/answer_3"
                    style="@style/answer_content"
                    android:text="@string/b"
                    android:elevation="2dp">
                </RadioButton>

                <RadioButton
                    android:id="@+id/answer_4"
                    style="@style/answer_content"
                    android:text="@string/b"
                    android:elevation="2dp">
                </RadioButton>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/btn_previous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pre"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btn_result"
                android:background="@color/btn_question_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_result"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>